Add text center to footer in the container and copy navbar to contact and portfolio

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 
 <body background="assets/images/papyrus.png">
+    <!-- navbar -->
     <nav class="navbar navbar-light border-bottom border-dark py-0 bg-white">
         <span class="navbar-brand mb-0 h1 bg-info text-white px-2">Shengyuan Xue</span>
         <ul class="nav">
@@ -25,16 +26,24 @@
         <div class="row">
             <div class="col">
                 <img src="..." class="img-thumbnail float-left" alt="placeholder">
-                <p>1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sequi, eaque saepe obcaecati iste quos laborum aspernatur! Eaque similique veniam aut hic a error, inventore quaerat laborum ducimus adipisci aspernatur.</p>
-                <p>2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptas dolores, fugiat corrupti mollitia placeat ipsum nobis? Laudantium voluptates porro quaerat sit eligendi aliquam, modi alias unde iste minima hic.</p>
-                <p>3 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque accusamus cupiditate alias error. Quisquam voluptates deleniti beatae nemo doloremque, iusto magnam inventore consequuntur reiciendis aperiam, quibusdam, ab distinctio exercitationem illum.</p>
+                <p>1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sequi, eaque saepe obcaecati iste
+                    quos laborum aspernatur! Eaque similique veniam aut hic a error, inventore quaerat laborum ducimus
+                    adipisci aspernatur.</p>
+                <p>2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptas dolores, fugiat corrupti
+                    mollitia placeat ipsum nobis? Laudantium voluptates porro quaerat sit eligendi aliquam, modi alias
+                    unde iste minima hic.</p>
+                <p>3 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque accusamus cupiditate alias error.
+                    Quisquam voluptates deleniti beatae nemo doloremque, iusto magnam inventore consequuntur reiciendis
+                    aperiam, quibusdam, ab distinctio exercitationem illum.</p>
             </div>
         </div>
     </div>
+    <!-- footer -->
+
     <footer class="footer bg-dark ">
-            <div class="container">
-                <span class="text-white">@Copyright</span>
-            </div>
+        <div class="container text-center">
+            <span class="text-white">@Copyright</span>
+        </div>
     </footer>
 </body>
 
