Add sticky footer with customized css and copy the footer to contact and portfolio

--- a/index.html
+++ b/index.html
@@ -3,48 +3,75 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>About Me</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
+    <link href="assets/css/style.css" rel="stylesheet">
+    </head>
 
 
 <body background="assets/images/papyrus.png">
-    <!-- navbar -->
+         <!-- navbar -->
     <nav class="navbar navbar-light border-bottom border-dark py-0 bg-white">
-        <span class="navbar-brand mb-0 h1 bg-info text-white px-2">Shengyuan Xue</span>
-        <ul class="nav">
-            <li><a class="nav-link" href=index.html>About</a></li>
-            <li><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-            <li><a class="nav-link" href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-    <!-- wrapper -->
-    <div class="container p-5 my-5 mx-auto bg-white">
-        <h2>About me</h2>
-        <hr>
-        <div class="row">
-            <div class="col">
-                <img src="..." class="img-thumbnail float-left" alt="placeholder">
-                <p>1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sequi, eaque saepe obcaecati iste
-                    quos laborum aspernatur! Eaque similique veniam aut hic a error, inventore quaerat laborum ducimus
-                    adipisci aspernatur.</p>
-                <p>2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptas dolores, fugiat corrupti
-                    mollitia placeat ipsum nobis? Laudantium voluptates porro quaerat sit eligendi aliquam, modi alias
-                    unde iste minima hic.</p>
-                <p>3 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque accusamus cupiditate alias error.
-                    Quisquam voluptates deleniti beatae nemo doloremque, iusto magnam inventore consequuntur reiciendis
-                    aperiam, quibusdam, ab distinctio exercitationem illum.</p>
+            <span class="navbar-brand mb-0 h1 bg-info text-white px-2">Shengyuan Xue</span>
+            <ul class="nav">
+                <li><a class="nav-link" href=index.html>About</a></li>
+                <li><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+                <li><a class="nav-link" href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+        <!-- wrapper -->
+        <div class="container p-5 my-5 mx-auto bg-white">
+            <h2>About me</h2>
+            <hr>
+            <div class="row">
+                <div class="col">
+                    <img src="..." class="img-thumbnail float-left" alt="placeholder">
+                    <p>1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sequi, eaque saepe obcaecati iste
+                        quos laborum aspernatur! Eaque similique veniam aut hic a error, inventore quaerat laborum ducimus
+                        adipisci aspernatur.</p>
+                    <p>2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptas dolores, fugiat corrupti
+                        mollitia placeat ipsum nobis? Laudantium voluptates porro quaerat sit eligendi aliquam, modi alias
+                        unde iste minima hic.</p>
+                    <p>3 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque accusamus cupiditate alias error.
+                        Quisquam voluptates deleniti beatae nemo doloremque, iusto magnam inventore consequuntur reiciendis
+                        aperiam, quibusdam, ab distinctio exercitationem illum.</p>
+                </div>
             </div>
         </div>
-    </div>
+   
+    <!-- <main role="main" class="container p-5 my-5 mx-auto bg-white">
+            <h2>About me</h2>
+            <hr>
+            <div class="row">
+                <div class="col">
+                    <img src="..." class="img-thumbnail float-left" alt="placeholder">
+                    <p>1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sequi, eaque saepe obcaecati iste
+                        quos laborum aspernatur! Eaque similique veniam aut hic a error, inventore quaerat laborum ducimus
+                        adipisci aspernatur.</p>
+                    <p>2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptas dolores, fugiat corrupti
+                        mollitia placeat ipsum nobis? Laudantium voluptates porro quaerat sit eligendi aliquam, modi alias
+                        unde iste minima hic.</p>
+                    <p>3 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque accusamus cupiditate alias error.
+                        Quisquam voluptates deleniti beatae nemo doloremque, iusto magnam inventore consequuntur reiciendis
+                        aperiam, quibusdam, ab distinctio exercitationem illum.</p>
+                </div>
+            </div>  
+    </main> -->
     <!-- footer -->
 
-    <footer class="footer bg-dark ">
+    <footer class="footer">
         <div class="container text-center">
-            <span class="text-white">@Copyright</span>
+            <span class="text-muted text-white">@Copyright</span>
         </div>
     </footer>
+    <!-- footer using navbar -->
+    <!-- <div class="navbar navbar-inverse navbar-fixed-bottom bg-dark">
+        <div class="container text-center">
+            <p class="navbar-text text-white">@Copyright</p>
+        </div>
+    </div> -->
 </body>
 
 </html>
