Add form and form groups to recreate contact with bootstrap

--- a/contact.html
+++ b/contact.html
@@ -23,42 +23,27 @@
         </nav>
         <!-- wrapper -->
         <div class="container p-5 my-5 mx-auto bg-white">
-            <h2>About me</h2>
+            <h2>Contact</h2>
             <hr>
-            <div class="row">
-                <div class="col">
-                    <img src="..." class="img-thumbnail float-left" alt="placeholder">
-                    <p>1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sequi, eaque saepe obcaecati iste
-                        quos laborum aspernatur! Eaque similique veniam aut hic a error, inventore quaerat laborum ducimus
-                        adipisci aspernatur.</p>
-                    <p>2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptas dolores, fugiat corrupti
-                        mollitia placeat ipsum nobis? Laudantium voluptates porro quaerat sit eligendi aliquam, modi alias
-                        unde iste minima hic.</p>
-                    <p>3 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque accusamus cupiditate alias error.
-                        Quisquam voluptates deleniti beatae nemo doloremque, iusto magnam inventore consequuntur reiciendis
-                        aperiam, quibusdam, ab distinctio exercitationem illum.</p>
-                </div>
-            </div>
+            <form action="">
+                   <div class="form-group">
+                       <label for="form-name">Name</label>
+                       <input type="text" class="form-control" placeholder="Enter name" id="form-name">
+                   </div>
+                   <div class="form-group">
+                       <label for="form-email">E-mail</label>
+                       <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email" id="form-email">
+                    </div>
+                       <div class="form-group">
+                       <label for="form-message">Message</label>
+                       <textarea class="form-control" rows="3" id="form-message" placeholder="Leave Message Here"></textarea>
+                   </div>
+                   <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+           
         </div>
    
-    <!-- <main role="main" class="container p-5 my-5 mx-auto bg-white">
-            <h2>About me</h2>
-            <hr>
-            <div class="row">
-                <div class="col">
-                    <img src="..." class="img-thumbnail float-left" alt="placeholder">
-                    <p>1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sequi, eaque saepe obcaecati iste
-                        quos laborum aspernatur! Eaque similique veniam aut hic a error, inventore quaerat laborum ducimus
-                        adipisci aspernatur.</p>
-                    <p>2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptas dolores, fugiat corrupti
-                        mollitia placeat ipsum nobis? Laudantium voluptates porro quaerat sit eligendi aliquam, modi alias
-                        unde iste minima hic.</p>
-                    <p>3 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque accusamus cupiditate alias error.
-                        Quisquam voluptates deleniti beatae nemo doloremque, iusto magnam inventore consequuntur reiciendis
-                        aperiam, quibusdam, ab distinctio exercitationem illum.</p>
-                </div>
-            </div>  
-    </main> -->
+
     <!-- footer -->
 
     <footer class="footer">
