--- a/contact.html
+++ b/contact.html
@@ -8,41 +8,42 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet">
-    </head>
+</head>
 
 
 <body background="assets/images/papyrus.png">
-         <!-- navbar -->
+    <!-- navbar -->
     <nav class="navbar navbar-light border-bottom border-dark py-0 bg-white">
-            <span class="navbar-brand mb-0 h1 bg-info text-white px-2">Shengyuan Xue</span>
-            <ul class="nav">
-                <li><a class="nav-link" href=index.html>About</a></li>
-                <li><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-                <li><a class="nav-link" href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <!-- wrapper -->
-        <div class="container p-5 my-5 mx-auto bg-white">
-            <h2>Contact</h2>
-            <hr>
-            <form action="">
-                   <div class="form-group">
-                       <label for="form-name">Name</label>
-                       <input type="text" class="form-control" placeholder="Enter name" id="form-name">
-                   </div>
-                   <div class="form-group">
-                       <label for="form-email">E-mail</label>
-                       <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email" id="form-email">
-                    </div>
-                       <div class="form-group">
-                       <label for="form-message">Message</label>
-                       <textarea class="form-control" rows="3" id="form-message" placeholder="Leave Message Here"></textarea>
-                   </div>
-                   <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-           
-        </div>
-   
+        <span class="navbar-brand mb-0 h1 bg-info text-white px-2">Shengyuan Xue</span>
+        <ul class="nav">
+            <li><a class="nav-link" href=index.html>About</a></li>
+            <li><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+            <li><a class="nav-link" href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <!-- wrapper -->
+    <div class="container p-5 my-5 mx-auto bg-white">
+        <h2>Contact</h2>
+        <hr>
+        <form action="">
+            <div class="form-group">
+                <label for="form-name">Name</label>
+                <input type="text" class="form-control" placeholder="Enter name" id="form-name">
+            </div>
+            <div class="form-group">
+                <label for="form-email">E-mail</label>
+                <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email"
+                    id="form-email">
+            </div>
+            <div class="form-group">
+                <label for="form-message">Message</label>
+                <textarea class="form-control" rows="3" id="form-message" placeholder="Leave Message Here"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+
+    </div>
+
 
     <!-- footer -->
 
