--- a/portfolio.html
+++ b/portfolio.html
@@ -8,57 +8,80 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet">
-    </head>
+</head>
 
 
 <body background="assets/images/papyrus.png">
-         <!-- navbar -->
+    <!-- navbar -->
     <nav class="navbar navbar-light border-bottom border-dark py-0 bg-white">
-            <span class="navbar-brand mb-0 h1 bg-info text-white px-2">Shengyuan Xue</span>
-            <ul class="nav">
-                <li><a class="nav-link" href=index.html>About</a></li>
-                <li><a class="nav-link" href="portfolio.html">Portfolio</a></li>
-                <li><a class="nav-link" href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <!-- wrapper -->
-        <div class="container p-5 my-5 mx-auto bg-white">
-            <h2>About me</h2>
-            <hr>
-            <div class="row">
-                <div class="col">
-                    <img src="..." class="img-thumbnail float-left" alt="placeholder">
-                    <p>1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sequi, eaque saepe obcaecati iste
-                        quos laborum aspernatur! Eaque similique veniam aut hic a error, inventore quaerat laborum ducimus
-                        adipisci aspernatur.</p>
-                    <p>2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptas dolores, fugiat corrupti
-                        mollitia placeat ipsum nobis? Laudantium voluptates porro quaerat sit eligendi aliquam, modi alias
-                        unde iste minima hic.</p>
-                    <p>3 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque accusamus cupiditate alias error.
-                        Quisquam voluptates deleniti beatae nemo doloremque, iusto magnam inventore consequuntur reiciendis
-                        aperiam, quibusdam, ab distinctio exercitationem illum.</p>
+        <span class="navbar-brand mb-0 h1 bg-info text-white px-2">Shengyuan Xue</span>
+        <ul class="nav">
+            <li><a class="nav-link" href=index.html>About</a></li>
+            <li><a class="nav-link" href="portfolio.html">Portfolio</a></li>
+            <li><a class="nav-link" href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+    <!-- wrapper -->
+    <div class="container p-5 my-5 bg-white">
+        <h2>Portfolio</h2>
+        <hr>
+        <div class="row m-5 p-0">
+            <div class="col-sm-4 bg-info">
+                <div class="card">
+                    <img class="card-img-top" src="assets/images/ph400_400.jpg" alt="image-holder">
+                    <div class="card-img-overlay p-0">
+
+                        <p class="card-text">1Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-4 bg-dark">
+                <div class="card">
+                    <img class="card-img-top" src="assets/images/ph400_400.jpg" alt="Card image cap">
+                    <div class="card-img-overlay p-0">
+
+                        <p class="card-text">3Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
                 </div>
             </div>
         </div>
-   
-    <!-- <main role="main" class="container p-5 my-5 mx-auto bg-white">
-            <h2>About me</h2>
-            <hr>
-            <div class="row">
-                <div class="col">
-                    <img src="..." class="img-thumbnail float-left" alt="placeholder">
-                    <p>1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sequi, eaque saepe obcaecati iste
-                        quos laborum aspernatur! Eaque similique veniam aut hic a error, inventore quaerat laborum ducimus
-                        adipisci aspernatur.</p>
-                    <p>2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque voluptas dolores, fugiat corrupti
-                        mollitia placeat ipsum nobis? Laudantium voluptates porro quaerat sit eligendi aliquam, modi alias
-                        unde iste minima hic.</p>
-                    <p>3 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Neque accusamus cupiditate alias error.
-                        Quisquam voluptates deleniti beatae nemo doloremque, iusto magnam inventore consequuntur reiciendis
-                        aperiam, quibusdam, ab distinctio exercitationem illum.</p>
+        <div class="row m-5">
+            <div class="col-sm-4 bg-dark">
+                <div class="card">
+                    <img class="card-img-top" src="assets/images/ph400_400.jpg" alt="Card image cap">
+                    <div class="card-img-overlay p-0">
+
+                        <p class="card-text">3Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
                 </div>
-            </div>  
-    </main> -->
+            </div>
+            <div class="col-sm-4 bg-info">
+                <div class="card">
+                    <img class="card-img-top" src="assets/images/ph400_400.jpg" alt="Card image cap">
+                    <div class="card-img-overlay p-0">
+
+                        <p class="card-text">41Some quick example text to build on the card title and make up the bulk
+                            of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row m-5">
+            <div class="col-sm-4 bg-info">
+                <div class="card">
+                    <img class="card-img-top" src="assets/images/ph400_400.jpg" alt="Card image cap">
+                    <div class="card-img-overlay p-0">
+
+                        <p class="card-text">5Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- footer -->
 
     <footer class="footer">
