Change font size and add path to img in the card

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <hr>
         <div class="row">
             <div class="col">
-                <img src="..." class="img-thumbnail float-left" alt="placeholder">
+                <img src="assets/images/ph400_400.jpg" class="img-thumbnail float-left mw-100% mh-100%" alt="placeholder" style="width: 200px;height: 200px;">
                 <p>1 Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero sequi, eaque saepe obcaecati iste
                     quos laborum aspernatur! Eaque similique veniam aut hic a error, inventore quaerat laborum ducimus
                     adipisci aspernatur.</p>
