Link a timed game template to the portfolio page

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,11 +28,10 @@
         <div class="row m-5 p-0">
             <div class="col-sm-4 bg-info">
                 <div class="card">
-                    <img class="card-img-top" src="assets/images/ph400_400.jpg" alt="image-holder">
+                   <img class="card-img-top" src="assets/images/meme0.gif" alt="image-holder">
                     <div class="card-img-overlay p-0">
 
-                        <p class="card-text">1Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text"> <a href="https://nova-xue.github.io/Timed-Game/"> A timed game(not responsive yet) </a></p>
                     </div>
                 </div>
             </div>
@@ -41,8 +40,7 @@
                     <img class="card-img-top" src="assets/images/ph400_400.jpg" alt="Card image cap">
                     <div class="card-img-overlay p-0">
 
-                        <p class="card-text">2Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text">2Some quick example text</p>
                     </div>
                 </div>
             </div>
@@ -53,8 +51,7 @@
                     <img class="card-img-top" src="assets/images/ph400_400.jpg" alt="Card image cap">
                     <div class="card-img-overlay p-0">
 
-                        <p class="card-text">3Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text">3Some quick example text</p>
                     </div>
                 </div>
             </div>
@@ -63,8 +60,7 @@
                     <img class="card-img-top" src="assets/images/ph400_400.jpg" alt="Card image cap">
                     <div class="card-img-overlay p-0">
 
-                        <p class="card-text">41Some quick example text to build on the card title and make up the bulk
-                            of the card's content.</p>
+                        <p class="card-text">41Some quick example text</p>
                     </div>
                 </div>
             </div>
@@ -75,8 +71,7 @@
                     <img class="card-img-top" src="assets/images/ph400_400.jpg" alt="Card image cap">
                     <div class="card-img-overlay p-0">
 
-                        <p class="card-text">5Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text">5Some quick example text</p>
                     </div>
                 </div>
             </div>
